Fix YOLO classifier exception

BUG: 499156
FIXED-IN: 8.6.0